--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <title>はじめてのページ</title>
+    <title>okutoraのページ</title>
   </head>
   <body>
     <h1>こんにちは！</h1>
-    <p>これは GitHub Pages で公開したページです。</p>
+    <p>これは 株式会社okutoraのページです。</p>
   </body>
+
 </html>
