--- a/index.html
+++ b/index.html
@@ -2,11 +2,48 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <title>okutoraのページ</title>
+    <title>おくとら</title>
+    <link rel="icon" href="./img/companylogo.jpg" sizes="32x32">
+    <link rel="icon" href="./img/companylogo.jpg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="./img/companylogo.jpg">
   </head>
   <body>
-    <h1>こんにちは！</h1>
-    <p>これは 株式会社okutoraのページです。</p>
-  </body>
+    <div>
+      <div style="display:flex;justify-content: center;">
+        <img style="position: relative; width: 500px;height: 100px;" src="./img/companyname.jpg" alt="株式会社億虎" />
+          <!-- <p style="position: absolute;top: 30px;left: 30px;">OKUTORA Corporation</p>-->
+      </div>
+      <div>
+      <div style="display:flex;justify-content: center;">
+        <img style="position: relative; width: 1000px;height: 500px;" src="./img/centralpicture.jpg" alt="株式会社億虎" />
+      </div>
 
+       <div style="display:flex;justify-content: center;">
+        <div style=" width: 900px ;background-color: #FBD603;border-radius: 100px; margin:20px;padding:20px"><font face="HG正楷書体-PRO,ＭＳ Ｐゴシック" size="5" style="font-weight: bold;">公告/PUBLIC NOTICE</font></div>
+      </div>
+      <div style="display:flex;justify-content: center;">
+         <div style="display: block">
+           <p style="">🎊🎊🎊🎊🎊🎊🌈🌸株&nbsp;式&nbsp;会&nbsp;社&nbsp;億&nbsp;虎&nbsp;設&nbsp;立🌸🌈🎊🎊🎊🎊🎊🎊</p>
+     
+         </div>
+      </div>
+
+      <div style="display:flex;justify-content: center;">
+        <div style="width: 900px ;background-color: #FBD603;border-radius: 100px;margin:20px;padding:20px"><font face="HG正楷書体-PRO,ＭＳ Ｐゴシック" size="5" style="font-weight: bold;">会社沿革/COMPANY TIMELINE</font></div>
+      </div>
+      <div style="display:flex;justify-content: center;">
+         <div style="display: block">
+           <p style="">２０２５&nbsp;年&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;日&nbsp;本&nbsp;東&nbsp;京&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;設&nbsp;立</p>
+           
+         </div>
+      </div>
+       <div style=" background-color: #FBD603;">
+         <hr style="border:none;border-top:dashed 5px yellow;height:1px;width:300px;">
+       </div>
+　　　<div>
+　　　　　©２０２５年　株&nbsp;式&nbsp;会&nbsp;社&nbsp;億&nbsp;虎 &nbsp;&nbsp;OKUTORA Corporation
+
+　　　</div>
+    </div>
+  </body>
 </html>
